# ViZDoom-rs

./: CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: build-and-test-wheels.yml  build-and-test-windows-wheels.yml  build-and-test.yml  build-docs-dev.yml  pre-commit.yml  test-gymnasium-wrapper.yml
crates/vizdoom/: Cargo.toml  README.md
crates/vizdoom-sys/: Cargo.toml  README.md  build.rs
crates/vizdoom-sys/src/: lib.rs
crates/vizdoom-sys/tests/: raw_ffi.rs
crates/vizdoom/examples/: basic.rs
crates/vizdoom/src/: enums.rs  error.rs  game.rs  lib.rs  state.rs
crates/vizdoom/tests/: contract.rs  integration.rs
docs/: conf.py  index.md
docs/api/: configuration_files.md  cpp.md  python.md
docs/api/cpp/: doom_game.md  enums.md  game_state.md
docs/api/python/: doom_game.md  enums.md  game_state.md
docs/dev/: building_from_source.md
docs/environments/: default.md  original_doom_levels.md
docs/faq/: index.md
docs/introduction/: apis_and_wrappers.md  python_quickstart.md
examples/c++/: README.md
examples/python/: README.md  fps_test.py  sectors_visualization.py
include/: ViZDoomC.h  ViZDoomGame.h
scenarios/: README.md
src/lib/: ViZDoomC.cpp  ViZDoomConfigLoader.cpp  ViZDoomController.cpp  ViZDoomController.h  ViZDoomGame.cpp
src/lib_python/: ViZDoomMethodsDocstrings.h  ViZDoomPythonModule.cpp  generate_vizdoom_stubs.py  vizdoom.pyi
src/vizdoom/bzip2/: decompress.c
src/vizdoom/src/: viz_game.cpp
src/vizdoom/tools/lemon/: lemon.c
tests/: manual_test_ipc_id.py  manual_test_performance.py  test_exceptions.py  test_get_state.py  test_instance_id.py
tests/c_abi/: CMakeLists.txt  test_c_abi_contract.cpp  test_c_abi_engine.cpp  test_support.h
