[package]
name = "vizdoom-sys"
version = "0.1.0"
edition = "2024"
description = "Raw FFI bindings to the ViZDoom C ABI (include/ViZDoomC.h)."
links = "vizdoom"
build = "build.rs"

[features]
# Build libvizdoom from the vendored C++ source tree via CMake and link
# against the result, instead of dynamically linking a prebuilt library.
# Requires the full ViZDoom source tree, which is only present inside the
# workspace (not in a published crates.io package).
static-link = ["dep:cmake"]

[dependencies]

[build-dependencies]
cmake = { version = "0.1", optional = true }
