[package]
name = "vizdoom-sys"
version = "0.1.0"
authors = ['jrcalgo <jacksonr121@outlook.com>']
edition = "2024"
description = "Raw FFI bindings to the ViZDoom C ABI (include/ViZDoomC.h)."
repository = "https://github.com/jrcalgo/vizdoom-rs"
documentation = "https://docs.rs/vizdoom-sys"
readme = "README.md"
links = "vizdoom"
build = "build.rs"
keywords = []
categories = []
license = "MIT"

[features]
# Build libvizdoom from the vendored C++ source tree via CMake and link
# against the result, instead of dynamically linking a prebuilt library.
# Requires the full ViZDoom source tree, which is only present inside the
# workspace (not in a published crates.io package).
static-link = ["dep:cmake"]

[dependencies]

[build-dependencies]
cmake = { version = "0.1", optional = true }
