[package]
name = "vizdoom"
version = "0.1.0"
edition = "2024"
description = "Safe, idiomatic Rust bindings for ViZDoom."

[features]
# Forwarded to vizdoom-sys: build libvizdoom from source via CMake and link
# against it, instead of dynamically linking a prebuilt library.
static-link = ["vizdoom-sys/static-link"]

[dependencies]
vizdoom-sys = { path = "../vizdoom-sys" }
thiserror = "2.0.18"

[[example]]
name = "basic"
path = "examples/basic.rs"
