[package]
name = "vizdoom"
version = "0.1.0"
authors = ['jrcalgo <jacksonr121@outlook.com>']
edition = "2024"
description = "Safe, idiomatic Rust bindings for ViZDoom."
repository = "https://github.com/jrcalgo/vizdoom-rs"
documentation = "https://docs.rs/vizdoom"
readme = "README.md"
keywords = []
categories = []
license = "MIT"

[features]
# Forwarded to vizdoom-sys: build libvizdoom from source via CMake and link
# against it, instead of dynamically linking a prebuilt library.
static-link = ["vizdoom-sys/static-link"]

[dependencies]
vizdoom-sys = { workspace = true }
thiserror = "2.0.18"

[[example]]
name = "basic"
path = "examples/basic.rs"
